--- a/index.htm
+++ b/index.htm
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Repo</title>
+    <title>Repository</title>
 </head>
 <body>
     hello this is my first github push
