--- a/index.htm
+++ b/index.htm
@@ -6,6 +6,6 @@
     <title>Repository</title>
 </head>
 <body>
-    hello this is my first github push
+    hello this is my first github push     hello students
 </body>
 </html>
